src/assets/stylesheet.css
:root {
    --bright: #fe6148;
    --dark: #1c191c;
    
}

.sr-only {
    position: absolute;
    left: -10000px;
    top: auto;

    width: 1px;
    height: 1px;
   
    overflow: hidden;
}


body {
    margin: 0;
    font-size: 16px;
    color: white;
    background-color: #000000;
}

h1 {
    font-size: 2em;
    margin: 0;
}

button {
    background-color: var(--dark);
    text-transform: uppercase;
    border: none;
    color: var(--bright);
    padding: 10px;
}

body > *:not(#top-nav), main > * {
    margin: 15px;
    vertical-align: top;
}

#top-nav {
    margin-bottom: 15px;

    /* -20 px for padding, -30 for margin */
    width: calc(100%-50px);
    height: 55px;
    background-color: var(--bright);
    box-shadow: 0px 2px 1px #471b14;

    padding: 0px 20px;

    display: flex;
    justify-content: space-between;
    align-items: center;    
}

header, #about, #contact, #vertical-text-block,
#spread, #toolbelt, hr, #projects,
#portrait, #a-creature-building-for-a-future, #musicplayer,
#resume {
    border: 0.8px solid var(--bright);
}


header {
    margin:auto; 
    /* -20px for padding, 30 for margin */
    width: calc(100% - 50px);
    color: white;
    text-transform: uppercase;
    min-height: 92px;
    

    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: 10px;

    gap: 20px;

}
@media (max-width: 1111px) {
    header {
        flex-wrap: wrap;
    }
}

header >:not(svg) {
    flex: 1;
}
header > span {
    flex-basis: 35%;
}
header h2 {
    color: var(--bright);
    margin: 0;
    margin-bottom: 10px;
}
header svg {
    fill: var(--bright);
    width: auto;
    height: 80%;
    min-width: 40px;
    max-height: 92px;
}
header img {
    flex-basis: 45%;
    border: 1px solid white;
    max-width: 100%;
}

#about {
    text-align: center;
}
#about p:not(:last-of-type) {
    font-weight: bold;
}

#about-and-contact {
    vertical-align: top;
    display: inline-grid;
    grid-template-columns: 544px fit-content(60px);
    grid-template-rows: fit-content(40%) 0.1fr 1.4fr;

    position: relative;
}

#about-and-contact > section {
    max-width: 544px;
}


#about {
    grid-column-start: 1;
    grid-row-start: 1;
}

#vertical-text-block {
    grid-column-start: 2;
    grid-row: span 3;
}

#links ul {
    list-style: none;
    display: flex;
    justify-content: center;
    gap: 15px;
}
#links ul * {
    width: 35px;
    height: 35px;
}

#links .svg-icon {
    background-color: var(--bright);
    border-radius: 100%;
}

#links .svg-icon li {
    display: flex;
    justify-content: center;
    align-items: center;
}

#links .svg-icon li svg {
    width: 70%;
}

#contact {
    grid-column: 1;
    grid-row: 3;
    background-image: url("contactme.png");
    background-repeat: no-repeat;
    background-position-y: bottom;
    background-size: contain;
}

#contact ul {
    list-style: none;
    padding: 0;
    padding-left: 10px;
    padding-top: 20px;
}

#contact li {
    margin-bottom: 10px;
}

#contact img:not(#marquee), #contact svg {
    width: 32px;
    vertical-align: middle;
    height: auto;
}

#marquee {
    background-color: var(--bright);
}

#resume {
    margin-top: 20px;
    display: inline-block;
}

#spread-and-resume {
    display: inline-flex;
    flex-direction: column;
    text-align: center;
}
#spread a {

}

#toolbelt {
    position: absolute;
    top: 100%;
    margin-top: 20px; /* Apply same margin as main gap */
    left: 0;
    width: 100%;
    height: auto;
}

#projects {
    padding: 10px;
    vertical-align: top;
    max-width: 40%;
    display: inline-block;
}

#projects-nav {
    display: flex;
    /* Compensate for padding. TODO: cleaner solution */
    width: calc(100%+20px);
    margin: -10px;
    text-align: center;
    color: var(--dark);

    /* TODO: this should not need to be done. but currently it is so that's just how it is gonna be for now */
    margin-bottom: 5px;
}

#projects-nav label {
    border: 3px solid var(--dark);
    background-color: var(--bright);
    padding: 5px;
    cursor: pointer;
    flex: 1;
}

.project-radio {
    display: none;
}
.project-radio + article {
    display: none;
}

.project-radio:checked + article {
    display: grid;  /* Keep in sync with .project { display } */
}

.project {
    display: grid;
    grid-template-rows: fit-content 0.5fr fit-content;
    grid-template-columns: 320px 1fr;
}

.project img {
    width: 90%;
    margin: 5px;
    grid-column: 1;
    grid-row: 1;
    object-fit: contain;
}

.project-overview {
    grid-row: 1;
    grid-column: 2;
}

.project hr {
    width: 95%;
    grid-column: span 2;
    grid-row: 2;
}

.contributions {
    grid-column: span 2;
    grid-row: 3;
    padding: 0;
}
.contributions h4 {
    margin: 5px;
}
.contributions > li {
    max-width: 40%;
    list-style: none;
    display: inline-block;
    vertical-align: top;
}

.contributions li li {
    list-style: disc;
}


aside {
    max-width: 300px;
    display: inline-block;
    /*display: inline-flex;
    flex-wrap: wrap;
    */
}

aside * {
    /*object-fit: contain;
    box-sizing: border-box;
    */
}

